--- a/Day_1/index.html
+++ b/Day_1/index.html
@@ -10,8 +10,6 @@
     <div class="card" id="card1">Card</div>
     <h3>Hallo</h3>
     <h3>World</h3>
-
-    <button onclick="onclickButton()">change color</button>
   </body>
 </html>
-<script src="../Day_1/js/index2.js"></script>
+<script src="../Day_1/js/math.js"></script>
